#328 increase perm gen